--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "jsonwebtoken": "^7.2.1",
     "morgan": "~1.7.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.31.2",
     "serve-favicon": "~2.3.0"
   }
 }
